--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>Copyright © 2024 Created by Shubham Malpani. All Rights Reserved.</p>
+      </footer>
     <script src="index.js"></script>
 </body>
 
