--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="main">
         <div class="panel">
             <div class="ptop">
-                <h1 id="header">Welcome to the Bubble Game</h1>
+                <h3 id="header">Welcome to the Bubble Game</h3>
             </div>
             <div class="pbtm">
                 <div class="midsection">
                     <div class="section">
-                        <h1> Let's Start the Game... 🎯</h1>
+                        <h1> Let's have some fun... 🎯</h1>
                         <button class="startbtn"> Start Game</button>
                     </div>
                 </div>
